--- a/src/app/features/pages/dashboard/dashboard.component.html
+++ b/src/app/features/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <span>Vexah S.A.S - Validador de Hermaientas</span>
+        <span>Vexah S.A.S - Validador de Herramientas</span>
     </mat-toolbar-row>
 </mat-toolbar>
 
