change familiar to familia

--- a/src/app/features/pages/dashboard/dashboard.component.html
+++ b/src/app/features/pages/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
                 </mat-card-header>
 
                 <mat-card-content>
-                    <mat-card-subtitle>Seleccione la familiar que desea validar</mat-card-subtitle>
+                    <mat-card-subtitle>Seleccione la familia que desea validar</mat-card-subtitle>
                     <mat-chip-listbox aria-label="Fish selection">
                         <mat-chip-option value="TWO_THREE_EIGHTHS" (selectionChange)="optionSelectedFamily($event)">2
                             3/8</mat-chip-option>
